samples/_failures_safe/1761666646_cbe8b3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9adecc1f.c: In function ‘main’:
./samples/SAFE/__tmp_9adecc1f.c:158:13: error: expected declaration or statement at end of input
  158 |             case STATE_ERROR: printf("ERROR");
      |             ^~~~
./samples/SAFE/__tmp_9adecc1f.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9adecc1f.c:158:13: error: expected declaration or statement at end of input
